Add parser class to handle parsing logic of command arguments
Parser class contains parsing logic of deadline, event, task indices,
and enforces no arguments when required
Created helper functions printGreeting and printExitMessage to keep
main function clean